--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "start": "vite",
-    "build": "vite build && copy .\\dist\\index.html .\\dist\\404.html",
+    "build": "vite build",
+    "build-manual": "vite build && copy .\\dist\\index.html .\\dist\\404.html",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
